# pubky-core-ffi

./: Cargo.toml  README.md  build.sh  build_android.sh  build_ios.sh  build_python.sh
bindings/android/: pubkymobile.kt
bindings/ios/: pubkymobile.swift  pubkymobileFFI.h
bindings/python/: README.md  setup.py
bindings/python/pubkycore/: __init__.py  pubkycore.py
pubky/pubky-homeserver/src/: database.rs
src/: auth.rs  keypair.rs  lib.rs  rustls_init.rs  tests.rs  types.rs  utils.rs
testing/: main.rs
tests/: lib_tests.rs
tests/common/: mod.rs
