[package]
name = "pubkycore"
version = "0.1.2"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]
name = "pubkycore"

[net]
git-fetch-with-cli = true

[dependencies]
uniffi = { version = "0.25.3", features = [ "cli" ] }
serde_json = "1.0.114"
hex = "0.4.3"
sha2 = "0.10.8"
serde = { version = "^1.0.209", features = ["derive"] }
tokio = "1.40.0"
url = "2.5.2"
base64 = "0.22.1"
once_cell = "1.19.0"
pubky = "0.4.2-rc.1"
pkarr = "3.3.1"
pubky-common = "0.3.0"
ntimestamp = "1.0.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.114"
hex = "0.4.3"
