[package]
name = "pubkycore"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]
name = "pubkycore"

[dependencies]
uniffi = { version = "0.29.0", features = [ "cli" ] }
serde_json = "1.0.114"
hex = "0.4.3"
sha2 = "0.10.8"
serde = { version = "^1.0.209", features = ["derive"] }
tokio = "1.40.0"
url = "2.5.2"
base64 = "0.22.1"
once_cell = "1.19.0"
reqwest = { version = "0.12.0", default-features = false, features = ["rustls-tls"] }
pubky = "0.6.0-rc.6"
pkarr = { version = "3.10.0", features = ["full"] }
pubky-common = "0.6.0-rc.6"
pubky-timestamp = "0.4.1"
bip39 = { version = "2.2.0", features = ["rand"] }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.114"
hex = "0.4.3"
